--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <title>待辦事項</title>
+    <title>待辦事項For School</title>
     <style>
         body {
             font-family: Arial, sans-serif;
